[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/mini_games/fertilizer_game.gd" id="1"]

[node name="FertilizerGame" type="Control"]
anchors_preset = 8
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2(600, 320)

[node name="Info" type="VBoxContainer" parent="Panel"]
anchors_preset = 1
anchor_right = 1.0
custom_minimum_size = Vector2(0, 80)

[node name="TotalLabel" type="Label" parent="Panel/Info"]
text = "Total: 0 kg/ha"

[node name="Feedback" type="Label" parent="Panel/Info"]
text = ""

[node name="Bags" type="HBoxContainer" parent="Panel"]
anchors_preset = 5
anchor_top = 0.3
anchor_bottom = 0.55
anchor_right = 1.0
custom_constants/separation = 12

[node name="Selections" type="VBoxContainer" parent="Panel"]
anchors_preset = 9
anchor_top = 0.55
anchor_bottom = 1.0
anchor_right = 1.0
custom_constants/separation = 8

[node name="List" type="VBoxContainer" parent="Panel/Selections"]
size_flags_vertical = 3
custom_constants/separation = 4

[node name="Buttons" type="HBoxContainer" parent="Panel/Selections"]

[node name="UndoButton" type="Button" parent="Panel/Selections/Buttons"]
text = "Undo"

[node name="ResetButton" type="Button" parent="Panel/Selections/Buttons"]
text = "Reset"

